# Prototype_VNFD

./: .gitignore  README.md  package.sh  sha_vals.txt
BaseHOT/5G_hostA/: base_hot.yaml
BaseHOT/dev/: base_hot.yaml
BaseHOT/elk/: base_hot.yaml
BaseHOT/nginx_opt/: base_hot.yaml
BaseHOT/simple/: base_hot.yaml
BaseHOT/suricata_opt/: base_hot.yaml
BaseHOT/v1/: base_hot.yaml
BaseHOT/zeek_opt/: base_hot.yaml
Config_files/elk_compose/: compose.yml
Config_files/prototype_compose/: vm_entry_script.sh
Definitions/: prototype_5G_hostA_df.yaml  prototype_dev_df.yaml  prototype_elk_df.yaml  prototype_nginx_opt_df.yaml  prototype_suricata_opt_df.yaml  prototype_top.yaml  prototype_types.yaml  prototype_v1_df.yaml  prototype_zeek_opt_df.yaml
Diagrams/: .$Diagrams.drawio.bkp  .$Diagrams.drawio.dtmp  Diagrams.drawio  prototype_v1.puml
PlantUML/: NGINX_Prototype.puml
Requests/: 5G_full.json  elk_instantiate.json  host_A_init.json  instantiate.json  mysql_instantiate.json  nrf_instantiate.json  request.sh  template.json  traffic_generator.json  udm_instantiate.json  udr_instantiate.json  update.json  upf_instantiate.json
Requests/input_examples/: instantiate_input_example.json  instantiate_input_example_2.json
UserData/: lcm_user_data.py
VNFDs/: clean.sh  clean_vnfs.sh  vnfd_package.sh
custom_elements/: README.md
docker/hybrid/: .env  (+2 more)
project_files/: local.conf  quickstart.sh
project_files/ostinato/traffic_gen_ostinato/: main.py  pyproject.toml
project_files/ostinato/traffic_gen_ostinato/traffic_gen_ostinato/data_types/: __init__.py  stream.py  ue.py
(+486 files in other folders)
