[tool.poetry]
name = "traffic-gen-ostinato"
version = "0.1.0"
description = ""
authors = ["nathanMils <106823768+nathanMils@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
